assets/scss/component/_navbar.scss
.navbar {
  border-top: 3px solid theme-color('primary');
  border-bottom: 20px solid theme-color('primary');
  background: color('white');
  font-family: $headings-font-family;

  @include media-breakpoint-only(sm) {
    border-bottom-width: 26px;
  }

  @include media-breakpoint-up(md) {
    border-bottom-width: 30px;
  }

  &-nav--locale {
    flex-direction: row;
    position: absolute;
    top: 0;
    right: 1rem;

    .nav-item {
      padding: $nav-link-padding-y ($nav-link-padding-x / 2);

      &.active {
        background: theme-color('primary');
      }

      .nav-link {
        padding: 0;
      }
    }
  }
}

